# engeletra-erp

./: .gitignore  Abrir Engeletra ERP.bat  Abrir Engeletra ERP.command  LICENSE  README.md  README2.md  README3.md  definitions.md  instruction.md  package.json  pyproject.toml
app-desktop/: README.md  index.html
app-desktop/assets/: app.js  styles.css
docs/: arquitetura.md  empacotamento-windows-mac.md  migracao_planilhas.md
electron/: main.js
engeletra-desktop/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
engeletra-desktop/backend/: requirements.txt
engeletra-desktop/backend/engeletra_api/: database.py  main.py  schemas.py  security.py  settings.py
engeletra-desktop/desktop/: main.js
engeletra-desktop/docs/: arquitetura-seguranca.md
engeletra-desktop/frontend/: index.html  package-lock.json  package.json  vite.config.js
engeletra-desktop/frontend/src/: App.jsx  styles.css  utils.js
engeletra-desktop/frontend/src/api/: index.js
engeletra-desktop/frontend/src/components/: ComingSoon.jsx  Modal.jsx
engeletra-desktop/frontend/src/features/: Caixa.jsx  Clients.jsx  Contas.jsx  Cronograma.jsx  Dashboard.jsx  Despesas.jsx  Ensaios.jsx  EquipEstoque.jsx  Equipment.jsx  Folha.jsx  Fornecedores.jsx  FrotaKm.jsx  FrotaManut.jsx  GerenciarContas.jsx  Invoices.jsx  Login.jsx  Obras.jsx  Pedidos.jsx  Ponto.jsx  Previsao.jsx  Quotes.jsx  Relatorios.jsx  ServiceOrders.jsx  Stock.jsx  Tecnicos.jsx  Veiculos.jsx
engeletra_erp/: hooks.py  modules.txt  patches.txt
engeletra_erp/engeletra_erp/: utils.py
(+9 files in other folders)
