[project]
name = "engeletra_erp"
version = "0.1.0"
description = "ERP vertical open-source para manutencao eletrica industrial baseado em ERPNext/Frappe."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Engeletra ERP Contributors" }
]
dependencies = []

[tool.setuptools]
packages = ["engeletra_erp"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
